# AVDemo

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/av/avdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-color.cpp  native-lib.cpp  native_color.h  test.cpp
app/src/main/java/com/av/avdemo/: JniTest.java  MainActivity.java
app/src/main/java/com/av/avdemo/opengl/: ColorRenderer.java  NativeColorRenderer.java  OpenGLTest1Activity.java  TriangleRenderer.java
app/src/main/res/layout/: activity_main.xml  activity_media_play.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/av/avdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
